--- a/gk-agrobusiness.html
+++ b/gk-agrobusiness.html
@@ -133,6 +133,24 @@
             <span>новое качество партнерства</span>
         </div>
     </div>
+    <section class="container">
+        <h2>О компании</h2>
+        <div class="about-company-text">
+            <p>ООО «ГК АГРОБИЗНЕС» - это сельскохозяйственный комплекс современного уровня, специализирующийся на
+                производстве семян подсолнечника, кукурузы и сои сербской селекции и производстве жидких комплексных
+                органо-минеральных удобрений с микроэлементами для листовой подкормки.</p>
+
+            <p>Мы гордимся тем, что вносим значимый вклад в развитие сельского хозяйства Российской Федерации. Наша цель
+                – обеспечить партнерам лучшие решения и технологии, которые позволят им увеличить производство и достичь
+                новых высот в бизнесе. Мы стремимся улучшить сельское хозяйство во всех его аспектах, от увеличения
+                урожайности и качества продукции до оптимизации процессов и повышения доходности наших клиентов.</p>
+
+            <p>Спасибо, что выбрали нас. Добро пожаловать в мир агробизнеса!</p>
+        </div>
+        <div class="text-center">
+            <a href="#" class="main-page-btn"><span>Подробнее</span><i class="fa fa-angle-right"></i></a>
+        </div>
+    </section>
     <div id="button-up" title="Вверх!">
         <span></span>
     </div>
