--- a/gk-agrobusiness.html
+++ b/gk-agrobusiness.html
@@ -150,6 +150,32 @@
         <div class="text-center">
             <a href="#" class="main-page-btn"><span>Подробнее</span><i class="fa fa-angle-right"></i></a>
         </div>
+        <div class="advantages-block">
+            <div class="advantages-item">
+                <div class="advantages-item-yellow">
+                    более<br>20 лет
+                </div>
+                <div class="advantages-item-white">
+                    на рынке
+                </div>
+            </div>
+            <div class="advantages-item">
+                <div class="advantages-item-yellow">
+                    50 000 литров
+                </div>
+                <div class="advantages-item-white">
+                    мощность производства МикроФид в сутки
+                </div>
+            </div>
+            <div class="advantages-item">
+                <div class="advantages-item-yellow">
+                    500 000 п.е. семян
+                </div>
+                <div class="advantages-item-white">
+                    в год
+                </div>
+            </div>
+        </div>
     </section>
     <div id="button-up" title="Вверх!">
         <span></span>
