--- a/gk-agrobusiness.html
+++ b/gk-agrobusiness.html
@@ -177,6 +177,65 @@
             </div>
         </div>
     </section>
+    <section class="blue-block-main">
+        <div class="margintop-main-page container">
+
+
+            <h2>Семена</h2>
+            <div class="subtitle-text">
+                Семена сои и подсолнечника по лицензии Сербии
+            </div>
+            <div class="catalog-set-block">
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/НСХ6008.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">Подсолнечник</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">HC X 6008</a>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/НСХ6012.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">Подсолнечник</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">HC X 6012</a>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/НСХ6054.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">Подсолнечник</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">HC X 6054</a>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/НСХ6316.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">Подсолнечник</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">HC X 6316</a>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <a href="#" class="main-page-btn"><span>Больше семян</span><i class="fa fa-angle-right"></i></a>
+            </div>
+        </div>
+    </section>
     <div id="button-up" title="Вверх!">
         <span></span>
     </div>
