--- a/gk-agrobusiness.html
+++ b/gk-agrobusiness.html
@@ -179,8 +179,6 @@
     </section>
     <section class="blue-block-main">
         <div class="margintop-main-page container">
-
-
             <h2>Семена</h2>
             <div class="subtitle-text">
                 Семена сои и подсолнечника по лицензии Сербии
@@ -236,6 +234,116 @@
             </div>
         </div>
     </section>
+    <section class="background-image-main">
+        <div class="container">
+            <h2 class="white-title">Минеральные удобрения<br>для листовой подкормки МикроФид</h2>
+            <p>Минеральные удобрения для листовых подкормок серии МикроФид – это высокопитательные комплексы, каждый из
+                которых включает в себя глицериновую основу и необходимый набор микроэлементов в доступной для растений
+                хелатной форме.</p>
+            <div class="catalog-set-block">
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/microfid1.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">МикроФид</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">Азот</a>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/microfid2.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">Бор</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">HC X 6012</a>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/microfid3.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">Цинк</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">HC X 6054</a>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/microfid4.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">МикроФид</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">Комплекс</a>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <a href="#" class="main-page-btn main-page-btn-white"><span>Больше удобрений</span><i
+                        class="fa fa-angle-right"></i></a>
+            </div>
+        </div>
+    </section>
+    <div class="container">
+        <h2>ГК «АГРОБИЗНЕС» развивает дилерскую сеть<br>на территории России</h2>
+        <div class="about-company-text">
+            <p>Предлагаем специальные условия для дальнейшего сотрудничества с дилерами и другими заинтересованными
+                организациями, по продаже нашей продукции.</p>
+            <p>Преимуществами работы с нами являются</p>
+        </div>
+        <div class="advantages-flex">
+            <div class="advantages-flex-item">
+                <div class="advantages-image">
+                    <img src="images/advantages1.png" alt="">
+                </div>
+                <div class="advantages-title">Выгодные условия сотрудничества, дилерские цены</div>
+            </div>
+            <div class="advantages-flex-item">
+                <div class="advantages-image">
+                    <img src="images/advantages2.png" alt="">
+                </div>
+                <div class="advantages-title">Оперативная консультация</div>
+            </div>
+            <div class="advantages-flex-item">
+                <div class="advantages-image">
+                    <img src="images/advantages3.png" alt="">
+                </div>
+                <div class="advantages-title">Размещение информации о дилере
+                    на сайте компании</div>
+            </div>
+            <div class="advantages-flex-item">
+                <div class="advantages-image">
+                    <img src="images/advantages4.png" alt="">
+                </div>
+                <div class="advantages-title">Обеспечение дилера
+                    своевременной информацией
+                    по изменениям в ассортиментной
+                    и ценовой политике компании</div>
+            </div>
+            <div class="advantages-flex-item">
+                <div class="advantages-image">
+                    <img src="images/advantages5.png" alt="">
+                </div>
+                <div class="advantages-title">Поддержка рекламными материалами, обеспечение всей необходимой
+                    методической, справочной и информационной продукциеи</div>
+            </div>
+            <div class="advantages-flex-item">
+                <div class="advantages-image">
+                    <img src="images/advantages6.png" alt="">
+                </div>
+                <div class="advantages-title">Исполнение заказов в кратчайшие сроки, резервирование товара на складе и
+                    помощь в организации отгрузки</div>
+            </div>
+        </div>
+    </div>
     <div id="button-up" title="Вверх!">
         <span></span>
     </div>
