--- a/gk-agrobusiness.html
+++ b/gk-agrobusiness.html
@@ -344,6 +344,68 @@
             </div>
         </div>
     </div>
+    <section class="blue-block-main">
+        <div class="container">
+            <div class="feedback-dealers">
+                <div class="feedback-dealers-img">
+                    <img src="images/business-people.png" alt="">
+                </div>
+                <div class="feedback-dealers-form">
+                    <h3>Хотите стать дилером?</h3>
+                    <p>Для получения более подробной информации свяжитесь с отделом продаж
+                        по тел.: <a href="tel:+74712360137">+7 (4712) 36-01-37</a> или оставьте заявку</p>
+                    <form method="post" action="/contact-us">
+                        <input type="text" placeholder="Имя">
+                        <input type="tel" placeholder="Телефон">
+                        <button class="button-green-main button-blue">Оставить заявку</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="background-image-main sunflower-background">
+        <div class="container">
+            <h2 class="white-title">Рецензии</h2>
+            <div class="reviews-flex">
+                <div class="reviews-item">
+                    <div class="reviews-img">
+                        <a href="images/reviews.png" data-fancybox="gallery"><img src="images/reviews.png" alt=""></a>
+                    </div>
+                    <div class="reviews-title">
+                        ООО «Ливня»
+                    </div>
+                </div>
+                <div class="reviews-item">
+                    <div class="reviews-img">
+                        <a href="images/reviews.png" data-fancybox="gallery"><img src="images/reviews.png" alt=""></a>
+                    </div>
+                    <div class="reviews-title">
+                        ООО «Ливня»
+                    </div>
+                </div>
+                <div class="reviews-item">
+                    <div class="reviews-img">
+                        <a href="images/reviews.png" data-fancybox="gallery"><img src="images/reviews.png" alt=""></a>
+                    </div>
+                    <div class="reviews-title">
+                        ООО «Ливня»
+                    </div>
+                </div>
+                <div class="reviews-item">
+                    <div class="reviews-img">
+                        <a href="images/reviews.png" data-fancybox="gallery"><img src="images/reviews.png" alt=""></a>
+                    </div>
+                    <div class="reviews-title">
+                        ООО «Ливня»
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <a href="#" class="main-page-btn main-page-btn-white"><span>Больше отзывов</span><i
+                        class="fa fa-angle-right"></i></a>
+            </div>
+        </div>
+    </section>
     <div id="button-up" title="Вверх!">
         <span></span>
     </div>
