--- a/gk-agrobusiness.html
+++ b/gk-agrobusiness.html
@@ -406,6 +406,21 @@
             </div>
         </div>
     </section>
+    <section class="blue-block-main">
+        <div class="container">
+            <div class="partners-block">
+                <h2>Наши партнеры</h2>
+                <div class="partners-flex">
+                    <div class="partners-item">
+                        <img src="images/partners1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="background-image-main questions-form">
+        <h2 class="white-title">Остались вопросы?</h2>
+    </section>
     <div id="button-up" title="Вверх!">
         <span></span>
     </div>
