--- a/gk-agrobusiness.html
+++ b/gk-agrobusiness.html
@@ -419,8 +419,61 @@
         </div>
     </section>
     <section class="background-image-main questions-form">
-        <h2 class="white-title">Остались вопросы?</h2>
+        <div class="container">
+            <h2 class="white-title">Остались вопросы?</h2>
+            <form method="post" action="/contact-us">
+                <input type="text" placeholder="Имя">
+                <input type="tel" placeholder="Телефон">
+                <button class="button-green-main button-blue">Оставить заявку</button>
+            </form>
+        </div>
     </section>
+    <footer class="footer-page">
+        <div class="container">
+            <div class="footer-flex-block">
+                <div class="header-logo">
+                    <a href="/">
+                        <img src="images/logo.png" alt="">
+                    </a>
+                </div>
+                <div class="footer-links">
+                    <a href="#">Главная</a>
+                    <a href="#">О компании</a>
+                    <a href="#">Семена</a>
+                    <a href="#">МикроФид</a>
+                    <a href="#">Документы</a>
+                </div>
+                <div class="footer-links">
+                    <a href="#">Дилерам</a>
+                    <a href="#">Рецензии</a>
+                    <a href="#">Вакансии</a>
+                    <a href="#">Новости</a>
+                    <a href="#">Контакты</a>
+                </div>
+                <div class="footer-address">
+                    <div class="footer-address-item">
+                        <a href="tel:+74712360137">+7 (4712) 36-01-37</a>
+                    </div>
+                    <div class="footer-address-item">
+                        <a href="mailto:office@gk-agrobusiness.ru">office@gk-agrobusiness.ru</a>
+                    </div>
+                    <div class="footer-address-item">
+                        <a href="#">Схема проезда</a>
+                    </div>
+                </div>
+                <div class="footer-links">
+                    <button class="button-green-main" data-bs-toggle="modal" data-bs-target="#exampleModal">Заказать
+                        звонок</button>
+                </div>
+            </div>
+            <div class="footer-politics">
+                2024 г. <a href="#">Политика конфиденциальности</a>
+            </div>
+            <div class="footer-copyright">
+                Разработано <a href="https://tetris-studio.ru" target="_blank">Tetris Studio</a>
+            </div>
+        </div>
+    </footer>
     <div id="button-up" title="Вверх!">
         <span></span>
     </div>
