--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="pages__title">Готовность по проекту</div>
         <ul class="pages__list">
             <li class="pages__item pages__item_red">
-                <a href="green-p.html" target="_blank">
+                <a href="gk-agrobusiness.html" target="_blank">
                     <span class="pages__name">Главная страница</span>
                     <span class="pages__href">gk-agrobusiness.html</span>
                 </a>
