--- a/gk-agrobusiness.html
+++ b/gk-agrobusiness.html
@@ -183,7 +183,7 @@
             <div class="subtitle-text">
                 Семена сои и подсолнечника по лицензии Сербии
             </div>
-            <div class="catalog-set-block">
+            <div class="catalog-set-block catalog-set-block-justify">
                 <div class="catalog-item">
                     <div class="catalog-image">
                         <a href="#"><img src="images/НСХ6008.png" alt=""></a>
@@ -240,7 +240,7 @@
             <p>Минеральные удобрения для листовых подкормок серии МикроФид – это высокопитательные комплексы, каждый из
                 которых включает в себя глицериновую основу и необходимый набор микроэлементов в доступной для растений
                 хелатной форме.</p>
-            <div class="catalog-set-block">
+            <div class="catalog-set-block catalog-set-block-justify">
                 <div class="catalog-item">
                     <div class="catalog-image">
                         <a href="#"><img src="images/microfid1.png" alt=""></a>
