--- a/category.html
+++ b/category.html
@@ -236,7 +236,7 @@
                     <a href="#"><img src="images/НСХ6008.png" alt=""></a>
                 </div>
                 <div class="catalog-category">
-                    <a href="#">Подсолнечник</a>
+                    <a href="#">Соя</a>
                 </div>
                 <div class="catalog-good-name">
                     <a href="#">HC X 6008</a>
@@ -247,7 +247,7 @@
                     <a href="#"><img src="images/НСХ6012.png" alt=""></a>
                 </div>
                 <div class="catalog-category">
-                    <a href="#">Подсолнечник</a>
+                    <a href="#">Соя</a>
                 </div>
                 <div class="catalog-good-name">
                     <a href="#">HC X 6012</a>
@@ -258,7 +258,7 @@
                     <a href="#"><img src="images/НСХ6054.png" alt=""></a>
                 </div>
                 <div class="catalog-category">
-                    <a href="#">Подсолнечник</a>
+                    <a href="#">Соя</a>
                 </div>
                 <div class="catalog-good-name">
                     <a href="#">HC X 6054</a>
@@ -269,7 +269,7 @@
                     <a href="#"><img src="images/НСХ6316.png" alt=""></a>
                 </div>
                 <div class="catalog-category">
-                    <a href="#">Подсолнечник</a>
+                    <a href="#">Соя</a>
                 </div>
                 <div class="catalog-good-name">
                     <a href="#">HC X 6316</a>
@@ -277,7 +277,20 @@
             </div>
         </div>
     </section>
-
+    <section class="blue-block-main">
+        <div class="container">
+            <div class="catalog-category-page">
+                <div class="catalog-category-img">
+                    <a href="#"><img alt="" src="images/catalog.png"></a>
+                </div>
+                <div class="catalog-category-download">
+                    <h3>Скачать каталог</h3>
+                    <a href="#" class="main-page-btn btn-dark-blue"><span>Загрузить</span> <i
+                            class="fa-solid fa-download"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="background-image-main questions-form">
         <div class="container">
             <h2 class="white-title">Остались вопросы?</h2>
