--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="pages__project">Проект сайта АгроБизнес</div>
         <div class="pages__title">Готовность по проекту</div>
         <ul class="pages__list">
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="gk-agrobusiness.html" target="_blank">
                     <span class="pages__name">Главная страница</span>
                     <span class="pages__href">gk-agrobusiness.html</span>
@@ -25,7 +25,7 @@
                     <span class="pages__href">seeds.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="category.html" target="_blank">
                     <span class="pages__name">Категория</span>
                     <span class="pages__href">category.html</span>
