--- a/category.html
+++ b/category.html
@@ -277,7 +277,7 @@
             </div>
         </div>
     </section>
-    <section class="blue-block-main">
+    <section class="blue-block-main blue-block-main-dark">
         <div class="container">
             <div class="catalog-category-page">
                 <div class="catalog-category-img">
