--- a/seeds.html
+++ b/seeds.html
@@ -137,8 +137,115 @@
             <span class="text-bold">EXPRESS:</span> HC X 6008, HC X 6012, HC X 6054, HC X 6316, НС Х 6773 и <span
                 class="text-bold">CLEARFIELD</span>: НС Х 6341, НС Х 6343.
         </div>
+        <div class="flex-seeds-set">
+            <div class="seeds-item-set">
+                <img alt="" src="images/НСХ6008.png">
+            </div>
+            <div class="seeds-item-set">
+                <img alt="" src="images/НСХ6012.png">
+            </div>
+            <div class="seeds-item-set">
+                <img alt="" src="images/НСХ6054.png">
+            </div>
+            <div class="seeds-item-set">
+                <img alt="" src="images/НСХ6316.png">
+            </div>
+            <div class="seeds-item-set">
+                <img alt="" src="images/НСХ6341.png">
+            </div>
+            <div class="seeds-item-set">
+                <img alt="" src="images/НСХ6343.png">
+            </div>
+        </div>
+        <div class="about-company-text">Группа Компаний «Агробизнес», является лицензиатом института Овощеводства и
+            полеводства г. Нови Сад, Сербия. Успешная работа и хорошие результаты, которые внедрялись Институтом в
+            сельскохозяйственную практику, привели к тому, что Институт занял важное место в мировой науке. В области
+            селекции преимущество отдается исследованиям, направленным на достижение высокой урожайности и высокого
+            качества, а также устойчивости к абиотическим и биотическим стрессам.
+        </div>
+        <div class="flex-seeds-set">
+            <div class="seeds-item-set seeds-item-company">
+                <img alt="" src="images/company-1.png">
+            </div>
+            <div class="seeds-item-set seeds-item-company">
+                <img alt="" src="images/company-2.png">
+            </div>
+        </div>
+        <div class="infograph-block">
+            <img alt="" src="images/infograph.png">
+        </div>
     </section>
-
+    <section class="blue-block-main blue-block-main-seeds">
+        <div class="container">
+            <h2>Семена</h2>
+            <div class="subtitle-text">
+                Семена сои и подсолнечника по лицензии Сербии
+            </div>
+            <div class="catalog-set-block catalog-set-block-justify">
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/НСХ6008.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">Подсолнечник</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">HC X 6008</a>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/НСХ6012.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">Подсолнечник</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">HC X 6012</a>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/НСХ6054.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">Подсолнечник</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">HC X 6054</a>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-image">
+                        <a href="#"><img src="images/НСХ6316.png" alt=""></a>
+                    </div>
+                    <div class="catalog-category">
+                        <a href="#">Подсолнечник</a>
+                    </div>
+                    <div class="catalog-good-name">
+                        <a href="#">HC X 6316</a>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <a href="#" class="main-page-btn"><span>Больше семян</span><i class="fa fa-angle-right"></i></a>
+            </div>
+        </div>
+    </section>
+    <section class="blue-block-main blue-block-main-dark">
+        <div class="container">
+            <div class="catalog-category-page">
+                <div class="catalog-category-img">
+                    <a href="#"><img alt="" src="images/catalog.png"></a>
+                </div>
+                <div class="catalog-category-download">
+                    <h3>Скачать каталог</h3>
+                    <a href="#" class="main-page-btn btn-dark-blue"><span>Загрузить</span> <i
+                            class="fa-solid fa-download"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="background-image-main questions-form">
         <div class="container">
             <h2 class="white-title">Остались вопросы?</h2>
