--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <span class="pages__href">gk-agrobusiness.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="seeds.html" target="_blank">
                     <span class="pages__name">О семенах</span>
                     <span class="pages__href">seeds.html</span>
