--- a/contacts.html
+++ b/contacts.html
@@ -133,9 +133,10 @@
         </ul>
         <h1 class="pages-title">Контакты</h1>
         <div class="contacts-item-page">
-            <a href="tel:+74712360137"><i class="fa-solid fa-mobile-screen-button"></i> +7 (4712) 36-01-37</a>
-            <a href="mailto:office@gk-agrobusiness.ru"><i class="fa-regular fa-envelope"></i>
-                office@gk-agrobusiness.ru</a>
+            <span><a href="tel:+74712360137"><i class="fa-solid fa-mobile-screen-button"></i> +7 (4712)
+                    36-01-37</a></span>
+            <span><a href="mailto:office@gk-agrobusiness.ru"><i class="fa-regular fa-envelope"></i>
+                    office@gk-agrobusiness.ru</a></span>
         </div>
         <h2>Реквизиты</h2>
         <div class="contacts-table">
