--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <span class="pages__href">contacts.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="vacancy.html" target="_blank">
                     <span class="pages__name">Вакансии</span>
                     <span class="pages__href">vacancy.html</span>
