--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="pages__href">about.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="certificates.html" target="_blank">
                     <span class="pages__name">Свидетельства и сертификаты</span>
                     <span class="pages__href">certificates.html</span>
