--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <span class="pages__href">events.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="reviews.html" target="_blank">
                     <span class="pages__name">Рецензии</span>
                     <span class="pages__href">reviews.html</span>
