--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <span class="pages__href">vacancy.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="reports.html" target="_blank">
                     <span class="pages__name">Отчёты исследований</span>
                     <span class="pages__href">reports.html</span>
