--- a/seeds.html
+++ b/seeds.html
@@ -132,7 +132,7 @@
             <li><a href="#">О семенах</a></li>
         </ul>
         <h1 class="pages-title">О семенах</h1>
-        <div class="about-company-text">Группа компаний Агробизнес производит гибриды, устойчивые к гербицидам
+        <div class="subtitle-text">Группа компаний Агробизнес производит гибриды, устойчивые к гербицидам
             технологии
             <span class="text-bold">EXPRESS:</span> HC X 6008, HC X 6012, HC X 6054, HC X 6316, НС Х 6773 и <span
                 class="text-bold">CLEARFIELD</span>: НС Х 6341, НС Х 6343.
@@ -157,7 +157,7 @@
                 <img alt="" src="images/НСХ6343.png">
             </div>
         </div>
-        <div class="about-company-text">Группа Компаний «Агробизнес», является лицензиатом института Овощеводства и
+        <div class="subtitle-text">Группа Компаний «Агробизнес», является лицензиатом института Овощеводства и
             полеводства г. Нови Сад, Сербия. Успешная работа и хорошие результаты, которые внедрялись Институтом в
             сельскохозяйственную практику, привели к тому, что Институт занял важное место в мировой науке. В области
             селекции преимущество отдается исследованиям, направленным на достижение высокой урожайности и высокого
