--- a/category.html
+++ b/category.html
@@ -133,7 +133,7 @@
         </ul>
         <h1 class="pages-title">Семена</h1>
         <h2>Семена подсолнечника</h2>
-        <div class="about-company-text">Семена подсолнечника по лицензии Сербии</div>
+        <div class="subtitle-text">Семена подсолнечника по лицензии Сербии</div>
         <div class="catalog-set-block">
             <div class="catalog-item">
                 <div class="catalog-image">
@@ -192,7 +192,7 @@
             </div>
         </div>
         <h2>Семена кукурузы</h2>
-        <div class="about-company-text">Семена кукурузы по лицензии Сербии</div>
+        <div class="subtitle-text">Семена кукурузы по лицензии Сербии</div>
         <div class="catalog-set-block">
             <div class="catalog-item">
                 <div class="catalog-image">
@@ -229,7 +229,7 @@
             </div>
         </div>
         <h2>Семена сои</h2>
-        <div class="about-company-text">Семена сои по лицензии Сербии</div>
+        <div class="subtitle-text">Семена сои по лицензии Сербии</div>
         <div class="catalog-set-block">
             <div class="catalog-item">
                 <div class="catalog-image">
