--- a/gk-agrobusiness.html
+++ b/gk-agrobusiness.html
@@ -294,7 +294,7 @@
     </section>
     <div class="container">
         <h2>ГК «АГРОБИЗНЕС» развивает дилерскую сеть<br>на территории России</h2>
-        <div class="about-company-text">
+        <div class="main-about-company-text">
             <p>Предлагаем специальные условия для дальнейшего сотрудничества с дилерами и другими заинтересованными
                 организациями, по продаже нашей продукции.</p>
             <p>Преимуществами работы с нами являются</p>
